# study/online-judge/internal/router/router.go
@@ -19,7 +19,7 @@ func Router() *gin.Engine {
 	}
 	// 问题
 	{
-		r.GET("/problem", service.GetProblemList)
+		r.GET("/problem/list", service.GetProblemList)
 		r.GET("/problem/:identity", service.GetProblem)
 	}
 	// 排行榜
@@ -37,11 +37,18 @@ func Router() *gin.Engine {
 
 	// 提交记录
 	{
-		r.GET("/submit", service.GetSubmitList)
+		r.GET("/submit/list", service.GetSubmitList)
+	}
+	// 分类
+	{
+		r.GET("category/list", middleware.AuthAdmin(), service.GetCategoryList)
+		r.PUT("category/add", middleware.AuthAdmin(), service.AddCategory)
+		r.POST("category/edit", middleware.AuthAdmin(), service.EditCategory)
+		r.DELETE("category/delete", middleware.AuthAdmin(), service.DeleteCategory)
 	}
 	// 管理员
 	{
-		r.POST("/admin/problem/add", middleware.AuthAdmin(), service.AddProblem)
+		r.PUT("/admin/problem/add", middleware.AuthAdmin(), service.AddProblem)
 	}
 	return r
 }
